kathara (__VERSION__-__DEBIAN_PACKAGE_VERSION____UBUNTU_VERSION__) __UBUNTU_VERSION__; urgency=low
    * Adding the possibility to change ulimit parameters for devices
 -- Kathara Team <contact@kathara.org>  __DATE__