@@ -6,7 +6,7 @@ We release patches for security vulnerabilities only for the last version:
 
 | Version | Supported Versions |
 |---------|--------------------|
-| 3.7.7   | :white_check_mark: |
+| 3.7.8   | :white_check_mark: |
 
 ## Reporting a Vulnerability
 
