@@ -1,6 +1,6 @@
 [project]
 name = "kathara"
-version = "3.7.7"
+version = "3.7.8"
 description = "A lightweight container-based network emulation tool."
 readme = "README.md"
 requires-python = ">=3.9"
