@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-VERSION=3.7.7
+VERSION=3.7.8
 DEBIAN_PACKAGE_VERSION=1
 LAUNCHPAD_NAME=user
 NO_BINARY_PACKAGES=pyroute2|pyuv|deepdiff
