@@ -1,6 +1,6 @@
 [metadata]
 name = kathara
-version = 3.7.7
+version = 3.7.8
 author = Kathara Framework
 author_email = contact@kathara.org
 description = A lightweight container-based network emulation tool.
